<resources>
    <string name="app_name">AppCalculators</string>
    <string name="enter_your_first_number">Enter your First Number</string>
    <string name="enter_second_number_">Enter Second Numberr</string>
    <string name="enter_second_number__">enter_second_number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="c">C</string>
    <string name="modulus">%</string>
    <string name="del">Del</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="mul">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_00">00</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
</resources>