<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/callExpression"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="end"
            android:background="#C3F3EEEE"
            android:ellipsize="start"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/actionButton"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/callResult"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="end"
            android:background="#C3F1ECEC"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/actionButton"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnC"
                style="@style/NumberButtonStyle"
                android:text="@string/c"
                android:textColor="#FF0000"></TextView>

            <TextView
                android:id="@+id/btnMod"
                style="@style/NumberButtonStyle"
                android:text="@string/modulus"
                android:textColor="#FFD500"></TextView>

            <TextView
                android:id="@+id/btnDelete"
                style="@style/NumberButtonStyle"
                android:text="@string/del"

                android:textColor="#FFD500"></TextView>

            <TextView
                android:id="@+id/btnDivide"
                style="@style/NumberButtonStyle"
                android:text="@string/divide"
                android:textColor="#FFD500"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnSeven"
                style="@style/NumberButtonStyle"
                android:text="@string/_7"></TextView>

            <TextView
                android:id="@+id/btnEight"
                style="@style/NumberButtonStyle"
                android:text="@string/_8"></TextView>

            <TextView
                android:id="@+id/btnNine"
                style="@style/NumberButtonStyle"
                android:text="@string/_9"></TextView>

            <TextView
                android:id="@+id/btnMultiply"
                style="@style/NumberButtonStyle"
                android:text="@string/mul"
                android:textColor="#FFD500"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnFour"
                style="@style/NumberButtonStyle"
                android:text="@string/_4"></TextView>

            <TextView
                android:id="@+id/btnFive"
                style="@style/NumberButtonStyle"
                android:text="@string/_5"></TextView>

            <TextView
                android:id="@+id/btnSix"
                style="@style/NumberButtonStyle"
                android:text="@string/_6"></TextView>

            <TextView
                android:id="@+id/btnMinus"
                style="@style/NumberButtonStyle"
                android:text="@string/minus"
                android:textColor="#FFD500"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnOne"
                style="@style/NumberButtonStyle"
                android:text="@string/_1"></TextView>

            <TextView
                android:id="@+id/btnTwo"
                style="@style/NumberButtonStyle"
                android:text="@string/_2"></TextView>

            <TextView
                android:id="@+id/btnThree"
                style="@style/NumberButtonStyle"
                android:text="@string/_3"></TextView>

            <TextView
                android:id="@+id/btnPlus"
                style="@style/NumberButtonStyle"
                android:text="@string/plus"
                android:textColor="#FFD500"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnZerozero"
                style="@style/NumberButtonStyle"
                android:text="@string/_00"></TextView>

            <TextView
                android:id="@+id/btnZero"
                style="@style/NumberButtonStyle"
                android:text="@string/_0"></TextView>

            <TextView
                android:id="@+id/btnDot"
                style="@style/NumberButtonStyle"
                android:text="@string/dot"></TextView>

            <TextView
                android:id="@+id/btnEqual"
                style="@style/NumberButtonStyle"
                android:background="#FFD500"
                android:text="@string/equal"></TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>